other regressors done

--- a/Models/Regression/InstallationRegressionMLIB.ipynb
+++ b/Models/Regression/InstallationRegressionMLIB.ipynb
@@ -11,18 +11,23 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn import svm\n",
-    "from utils import read_data, hyperparameter_search, encode, decode, floor_col\n",
+    "\n",
     "from scipy.stats import loguniform\n",
     "from pyspark.ml.feature import VectorAssembler\n",
-    "from pyspark.ml.classification import RandomForestClassifier\n",
-    "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
+    "\n",
     "from pyspark.sql.functions import col\n",
     "\n",
-    "from pyspark.mllib.tree import RandomForest, RandomForestModel\n",
+    "\n",
+    "from pyspark.ml.regression import LinearRegression\n",
+    "from pyspark.ml.feature import VectorIndexer\n",
+    "from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "\n",
     "\n",
     "import sys\n",
     "sys.path.append('../../DataPreprocessing')\n",
-    "import DataPreprocessing"
+    "sys.path.append('../Classification')\n",
+    "import DataPreprocessing\n",
+    "from utils import read_data, hyperparameter_search, encode, decode, floor_col"
    ]
   },
   {
@@ -214,16 +219,16 @@
       "+-----------------+------+------------+--------+-----+-----+---------------+------------+------------+--------------+--------------+-----------------+------------+----------------+--------------+----+------------+-------------------+------------------+\n",
       "|         Category|Rating|Rating Count|Installs|Price| Size|Minimum Android|    Released|Last Updated|Content Rating|Privacy Policy|Developer Website|Ad Supported|In App Purchases|Editors Choice|Free|Category_enc|Minimum Android_enc|Content Rating_enc|\n",
       "+-----------------+------+------------+--------+-----+-----+---------------+------------+------------+--------------+--------------+-----------------+------------+----------------+--------------+----+------------+-------------------+------------------+\n",
-      "|  Personalization|     4|         820|   50000|  0.0|  3.5|     4.1 and up|Sep 22, 2019|        2020|      Everyone|          true|             true|        true|           false|         false|true|           3|                  0|                 0|\n",
-      "|   Travel & Local|     3|        1572|   10000|  0.0|2.9E7|     4.2 and up| Sep 5, 2018|        2020|      Everyone|          true|             true|       false|           false|         false|true|          23|                  5|                 0|\n",
-      "|        Lifestyle|     3|         328|   10000|  0.0|7.0E7|     4.1 and up| Jul 1, 2020|        2021|      Everyone|          true|            false|       false|           false|         false|true|           6|                  0|                 0|\n",
-      "|           Puzzle|     4|         211|   10000|  0.0|1.6E7|     5.0 and up|Mar 13, 2020|        2020|      Everyone|          true|             true|        true|            true|         false|true|          10|                  1|                 0|\n",
-      "|    Entertainment|     3|         736|  500000|  0.0|2.0E7|     5.0 and up|Apr 21, 2019|        2020|      Everyone|          true|             true|        true|           false|         false|true|           2|                  1|                 0|\n",
-      "|Maps & Navigation|     2|         420|   50000|  0.0|  2.6|     4.0 and up| Nov 6, 2013|        2017|      Everyone|          true|             true|        true|           false|         false|true|          26|                  4|                 0|\n",
-      "|            Tools|     2|         420|   50000|  0.0|  4.9|     4.1 and up|Jun 28, 2013|        2020|      Everyone|          true|             true|        true|           false|         false|true|           0|                  0|                 0|\n",
-      "|           Sports|     4|        2781|  100000|  0.0|3.8E7|     2.1 and up|Apr 27, 2013|        2015|      Everyone|         false|             true|        true|            true|         false|true|          13|                 14|                 0|\n",
-      "|        Lifestyle|     4|         266|   10000|  0.0|  7.1|     4.0 and up|Oct 24, 2015|        2016|      Everyone|          true|             true|       false|            true|         false|true|           6|                  4|                 0|\n",
-      "|Books & Reference|     4|         337|  100000|  0.0|2.4E7|   4.0.3 and up|Apr 14, 2012|        2020|      Everyone|          true|             true|        true|            true|         false|true|           4|                  3|                 0|\n",
+      "|  Personalization|   4.7|         820|   50000|  0.0|  3.5|     4.1 and up|Sep 22, 2019|        2020|      Everyone|          true|             true|        true|           false|         false|true|           3|                  0|                 0|\n",
+      "|   Travel & Local|   3.7|        1572|   10000|  0.0|2.9E7|     4.2 and up| Sep 5, 2018|        2020|      Everyone|          true|             true|       false|           false|         false|true|          23|                  5|                 0|\n",
+      "|        Lifestyle|   3.7|         328|   10000|  0.0|7.0E7|     4.1 and up| Jul 1, 2020|        2021|      Everyone|          true|            false|       false|           false|         false|true|           6|                  0|                 0|\n",
+      "|           Puzzle|   4.4|         211|   10000|  0.0|1.6E7|     5.0 and up|Mar 13, 2020|        2020|      Everyone|          true|             true|        true|            true|         false|true|          10|                  1|                 0|\n",
+      "|    Entertainment|   3.8|         736|  500000|  0.0|2.0E7|     5.0 and up|Apr 21, 2019|        2020|      Everyone|          true|             true|        true|           false|         false|true|           2|                  1|                 0|\n",
+      "|Maps & Navigation|   2.3|         420|   50000|  0.0|  2.6|     4.0 and up| Nov 6, 2013|        2017|      Everyone|          true|             true|        true|           false|         false|true|          26|                  4|                 0|\n",
+      "|            Tools|   2.7|         420|   50000|  0.0|  4.9|     4.1 and up|Jun 28, 2013|        2020|      Everyone|          true|             true|        true|           false|         false|true|           0|                  0|                 0|\n",
+      "|           Sports|   4.4|        2781|  100000|  0.0|3.8E7|     2.1 and up|Apr 27, 2013|        2015|      Everyone|         false|             true|        true|            true|         false|true|          13|                 14|                 0|\n",
+      "|        Lifestyle|   4.3|         266|   10000|  0.0|  7.1|     4.0 and up|Oct 24, 2015|        2016|      Everyone|          true|             true|       false|            true|         false|true|           6|                  4|                 0|\n",
+      "|Books & Reference|   4.1|         337|  100000|  0.0|2.4E7|   4.0.3 and up|Apr 14, 2012|        2020|      Everyone|          true|             true|        true|            true|         false|true|           4|                  3|                 0|\n",
       "+-----------------+------+------------+--------+-----+-----+---------------+------------+------------+--------------+--------------+-----------------+------------+----------------+--------------+----+------------+-------------------+------------------+\n",
       "only showing top 10 rows\n",
       "\n"
@@ -232,7 +237,7 @@
    ],
    "source": [
     "df = encode(df, columns=['Category', 'Minimum Android', 'Content Rating'])\n",
-    "df = floor_col(df, 'Rating')\n",
+    "#df = floor_col(df, 'Rating')\n",
     "df.show(10)"
    ]
   },
@@ -247,7 +252,7 @@
      "text": [
       "root\n",
       " |-- Category: string (nullable = true)\n",
-      " |-- Rating: integer (nullable = true)\n",
+      " |-- Rating: float (nullable = true)\n",
       " |-- Rating Count: integer (nullable = true)\n",
       " |-- Installs: integer (nullable = true)\n",
       " |-- Price: float (nullable = true)\n",
@@ -282,32 +287,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------------+------+\n",
-      "|            features|Rating|\n",
-      "+--------------------+------+\n",
-      "|[4.0,820.0,50000....|     4|\n",
-      "|[3.0,1572.0,10000...|     3|\n",
-      "|(15,[0,1,2,4,5,6,...|     3|\n",
-      "|[4.0,211.0,10000....|     4|\n",
-      "|[3.0,736.0,500000...|     3|\n",
-      "|[2.0,420.0,50000....|     2|\n",
-      "|[2.0,420.0,50000....|     2|\n",
-      "|[4.0,2781.0,10000...|     4|\n",
-      "|[4.0,266.0,10000....|     4|\n",
-      "|[4.0,337.0,100000...|     4|\n",
-      "+--------------------+------+\n",
+      "+--------------------+--------+\n",
+      "|            features|Installs|\n",
+      "+--------------------+--------+\n",
+      "|[4.69999980926513...|   50000|\n",
+      "|[3.70000004768371...|   10000|\n",
+      "|(14,[0,1,3,4,5,10...|   10000|\n",
+      "|[4.40000009536743...|   10000|\n",
+      "|[3.79999995231628...|  500000|\n",
+      "|[2.29999995231628...|   50000|\n",
+      "|(14,[0,1,3,4,5,6,...|   50000|\n",
+      "|[4.40000009536743...|  100000|\n",
+      "|[4.30000019073486...|   10000|\n",
+      "|[4.09999990463256...|  100000|\n",
+      "+--------------------+--------+\n",
       "only showing top 10 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "inputColums=['Rating','Rating Count','Installs','Price',\\\n",
+    "inputColums=['Rating','Rating Count','Price',\\\n",
     "             'Size','Last Updated','Privacy Policy','Developer Website',\\\n",
     "                'Ad Supported','In App Purchases','Editors Choice','Free','Category_enc','Minimum Android_enc','Content Rating_enc']\n",
     "assembler = VectorAssembler(inputCols=inputColums, outputCol='features')\n",
     "\n",
-    "traindf = assembler.transform(df).select(['features', 'Rating'])\n",
+    "traindf = assembler.transform(df).select(['features', 'Installs'])\n",
     "traindf.show(10)"
    ]
   },
@@ -315,85 +320,38 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "train,test = traindf.randomSplit([0.7, 0.3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training points count : 187196\n",
-      "Testing count : 79945\n"
+      "Coefficients: [25380.60841888817,21.252944394341934,-3253.609468671667,0.0034029786222980916,109138.72650858058,117496.23440338678,85856.31010641782,72522.13424286516,391232.74794453627,2918255.321088485,488467.50097056665,-2450.2696350966394,43462.60960937776,-3872.5833468905957]\n",
+      "Intercept: -220974752.51969108\n",
+      "numIterations: 15\n",
+      "objectiveHistory: [0.5000000000000001, 0.47765806150884244, 0.41537577909407575, 0.4000325467400605, 0.3962246420929478, 0.39530666758672367, 0.3950723531859682, 0.39501394091531233, 0.3949950054476279, 0.39499482465153196, 0.394994740672645, 0.3949947378089587, 0.39499473598325313, 0.3949947359205883, 0.3949947359153149, 0.3949947359143056]\n",
+      "RMSE: 9830184.432494\n",
+      "r2: 0.210011\n"
      ]
     }
    ],
    "source": [
-    "print(f'Training points count : {train.count()}')\n",
-    "print(f'Testing count : {test.count()}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "RF_classifier = RandomForestClassifier(labelCol='Rating', numTrees=100).fit(train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pred = RF_classifier.transform(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluatorMulti = MulticlassClassificationEvaluator(labelCol=\"Rating\", predictionCol=\"prediction\")\n",
     "\n",
-    "predictionAndTarget = pred.select(['Rating', 'prediction'])\n",
-    "# Get metrics\n",
-    "acc = evaluatorMulti.evaluate(predictionAndTarget, {evaluatorMulti.metricName: \"accuracy\"})\n",
-    "f1 = evaluatorMulti.evaluate(predictionAndTarget, {evaluatorMulti.metricName: \"f1\"})\n",
-    "weightedPrecision = evaluatorMulti.evaluate(predictionAndTarget, {evaluatorMulti.metricName: \"weightedPrecision\"})\n",
-    "weightedRecall = evaluatorMulti.evaluate(predictionAndTarget, {evaluatorMulti.metricName: \"weightedRecall\"})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "acc : 0.9804115329288886\n",
-      "f1 : 0.9751565291533941\n",
-      "weightedPrecision : 0.9730100310775148\n",
-      "weightedRecall : 0.9804115329288886\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"acc : {acc}\")\n",
-    "print(f\"f1 : {f1}\")\n",
-    "print(f\"weightedPrecision : {weightedPrecision}\")\n",
-    "print(f\"weightedRecall : {weightedRecall}\")"
+    "lr = LinearRegression(maxIter=160, regParam=0.3, elasticNetParam=0.8, labelCol='Installs', featuresCol='features')\n",
+    "(trainingData, testData) = traindf.randomSplit([0.7, 0.3])\n",
+    "# Fit the model\n",
+    "lrModel = lr.fit(trainingData)\n",
+    "\n",
+    "# Print the coefficients and intercept for linear regression\n",
+    "print(\"Coefficients: %s\" % str(lrModel.coefficients))\n",
+    "print(\"Intercept: %s\" % str(lrModel.intercept))\n",
+    "\n",
+    "# Summarize the model over the training set and print out some metrics\n",
+    "trainingSummary = lrModel.summary\n",
+    "print(\"numIterations: %d\" % trainingSummary.totalIterations)\n",
+    "print(\"objectiveHistory: %s\" % str(trainingSummary.objectiveHistory))\n",
+    "#trainingSummary.residuals.show()\n",
+    "print(\"RMSE: %f\" % trainingSummary.rootMeanSquaredError)\n",
+    "print(\"r2: %f\" % trainingSummary.r2)\n"
    ]
   },
   {
@@ -402,53 +360,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainRDD = traindf.rdd\n",
-    "train_rdd, test_rdd = trainRDD.randomSplit([0.7, 0.3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Train a RandomForest model.\n",
-    "#  Empty categoricalFeaturesInfo indicates all features are continuous.\n",
-    "#  Note: Use larger numTrees in practice.\n",
-    "#  Setting featureSubsetStrategy=\"auto\" lets the algorithm choose.\n",
-    "model = RandomForest.trainClassifier(train_rdd, numClasses=4, categoricalFeaturesInfo={},\n",
-    "                                     numTrees=100, featureSubsetStrategy=\"auto\",\n",
-    "                                     impurity='gini', maxDepth=4, maxBins=32)\n",
-    "\n",
-    "# Evaluate model on test instances and compute test error\n",
-    "predictions = model.predict(test_rdd.map(lambda x: x.features))\n",
-    "labelsAndPredictions = test_rdd.map(lambda lp: lp.label).zip(predictions)\n",
-    "testErr = labelsAndPredictions.filter(\n",
-    "    lambda lp: lp[0] != lp[1]).count() / float(test_rdd.count())\n",
-    "print('Test Error = ' + str(testErr))\n",
-    "print('Learned classification forest model:')\n",
-    "print(model.toDebugString())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "# Save and load model\n",
-    "model.save(sc, \"target/tmp/myRandomForestClassificationModel\")\n",
-    "sameModel = RandomForestModel.load(sc, \"target/tmp/myRandomForestClassificationModel\")\n",
-    "'''\n"
-   ]
   }
  ],
  "metadata": {
