--- a/Models/Regression/PricePrediction.ipynb
+++ b/Models/Regression/PricePrediction.ipynb
@@ -115,7 +115,9 @@
    "source": [
     "'''\n",
     "App Name and App Id are useless columns here, so we can remove them safely\n",
-    "The Price has a correlation of -0.004 with the max installations, so we must remove it\n",
+    "The Price has a correlation of -0.004 with the max installations, -0.0051 with min installs& installs,\n",
+    "-0.0025 with size,-0.0018 with rating , -0.0012 with rating count so we removed them,\n",
+    "Also we've very large number of developers so it's not a good idea to use it as a feature\n",
     "'''\n",
     "useless_cols= ['App Name','App Id','Installs','Maximum Installs','Minimum Installs',\\\n",
     "               'Rating','Rating Count','Size','Content Rating',\\\n",
