--- a/Models/Regression/RatingPrediction.ipynb
+++ b/Models/Regression/RatingPrediction.ipynb
@@ -122,7 +122,7 @@
    "source": [
     "'''\n",
     "App Name and App Id are useless columns here, so we can remove them safely\n",
-    "The Price has a correlation of -0.0018 with the max installations, so we must remove it\n",
+    "The Rating has a correlation of -0.0018 with price, 0.011 with size so we can remove them. \n",
     "'''\n",
     "useless_cols= ['App Name','App Id','Price','Size','Free',]\n",
     "df= remove_useless_col(df,useless_cols)\n",
