--- a/DataAnalysis/Clustering/DBSCAN_Clustering.ipynb
+++ b/DataAnalysis/Clustering/DBSCAN_Clustering.ipynb
@@ -863,9 +863,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Select Binary features\n",
-    "    - we will cluster apps to groups based on their features and identify the most important features that contribute to app success.\n",
-    "    -????????????"
+    "## Select Binary features"
    ]
   },
   {
@@ -1333,29 +1331,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Centroid initilization with Kmean++"
+    "### DBSCAN Clustering with jaccard distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "MemoryError",
-     "evalue": "Unable to allocate 605. GiB for an array with shape (285047, 285047) and data type float64",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 13\u001b[0m\n\u001b[0;32m      8\u001b[0m     jaccard_distance\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m \u001b[39m-\u001b[39m intersection \u001b[39m/\u001b[39m union\n\u001b[0;32m      9\u001b[0m     \u001b[39mreturn\u001b[39;00m jaccard_distance\n\u001b[1;32m---> 13\u001b[0m distance_matrix \u001b[39m=\u001b[39m pairwise_distances(Y, metric\u001b[39m=\u001b[39;49mjaccard_distance)\n\u001b[0;32m     14\u001b[0m \u001b[39m# Cluster the data using DBSCAN\u001b[39;00m\n\u001b[0;32m     15\u001b[0m dbscan \u001b[39m=\u001b[39m DBSCAN(metric\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mprecomputed\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python38\\site-packages\\sklearn\\metrics\\pairwise.py:2039\u001b[0m, in \u001b[0;36mpairwise_distances\u001b[1;34m(X, Y, metric, n_jobs, force_all_finite, **kwds)\u001b[0m\n\u001b[0;32m   2036\u001b[0m         \u001b[39mreturn\u001b[39;00m distance\u001b[39m.\u001b[39msquareform(distance\u001b[39m.\u001b[39mpdist(X, metric\u001b[39m=\u001b[39mmetric, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds))\n\u001b[0;32m   2037\u001b[0m     func \u001b[39m=\u001b[39m partial(distance\u001b[39m.\u001b[39mcdist, metric\u001b[39m=\u001b[39mmetric, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n\u001b[1;32m-> 2039\u001b[0m \u001b[39mreturn\u001b[39;00m _parallel_pairwise(X, Y, func, n_jobs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python38\\site-packages\\sklearn\\metrics\\pairwise.py:1579\u001b[0m, in \u001b[0;36m_parallel_pairwise\u001b[1;34m(X, Y, func, n_jobs, **kwds)\u001b[0m\n\u001b[0;32m   1576\u001b[0m X, Y, dtype \u001b[39m=\u001b[39m _return_float_dtype(X, Y)\n\u001b[0;32m   1578\u001b[0m \u001b[39mif\u001b[39;00m effective_n_jobs(n_jobs) \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m-> 1579\u001b[0m     \u001b[39mreturn\u001b[39;00m func(X, Y, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)\n\u001b[0;32m   1581\u001b[0m \u001b[39m# enforce a threading backend to prevent data communication overhead\u001b[39;00m\n\u001b[0;32m   1582\u001b[0m fd \u001b[39m=\u001b[39m delayed(_dist_wrapper)\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python38\\site-packages\\sklearn\\metrics\\pairwise.py:1603\u001b[0m, in \u001b[0;36m_pairwise_callable\u001b[1;34m(X, Y, metric, force_all_finite, **kwds)\u001b[0m\n\u001b[0;32m   1599\u001b[0m X, Y \u001b[39m=\u001b[39m check_pairwise_arrays(X, Y, force_all_finite\u001b[39m=\u001b[39mforce_all_finite)\n\u001b[0;32m   1601\u001b[0m \u001b[39mif\u001b[39;00m X \u001b[39mis\u001b[39;00m Y:\n\u001b[0;32m   1602\u001b[0m     \u001b[39m# Only calculate metric for upper triangle\u001b[39;00m\n\u001b[1;32m-> 1603\u001b[0m     out \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mzeros((X\u001b[39m.\u001b[39;49mshape[\u001b[39m0\u001b[39;49m], Y\u001b[39m.\u001b[39;49mshape[\u001b[39m0\u001b[39;49m]), dtype\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mfloat\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m   1604\u001b[0m     iterator \u001b[39m=\u001b[39m itertools\u001b[39m.\u001b[39mcombinations(\u001b[39mrange\u001b[39m(X\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]), \u001b[39m2\u001b[39m)\n\u001b[0;32m   1605\u001b[0m     \u001b[39mfor\u001b[39;00m i, j \u001b[39min\u001b[39;00m iterator:\n",
-      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 605. GiB for an array with shape (285047, 285047) and data type float64"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.cluster import DBSCAN\n",
     "from sklearn.metrics.pairwise import pairwise_distances\n",
@@ -1390,14 +1373,6 @@
    "outputs": [],
    "source": [
     "print(\"Score: \",silhouette_score(Y, labels))"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Results"
    ]
   }
  ],
